# logic_course

./: .gitignore  README.md
.github/workflows/: binder.yml  issues.yml
acknowledgments/: acknowledgments.cabal  package.yaml  stack.yaml
acknowledgments/app/: Main.hs
assets/css/: style.scss
binder/: environment.yml  postBuild
docs/: Gemfile  Makefile  _config.yml  index.md
docs/assets/css/: style.css  style.scss  style.scss-2
docs/labs/: LabZ3.ipynb  task01_FAQ.md
docs/labs/agda/: Lab01.ipynb  Lab02.ipynb  Lab02.lagda.ipynb  agda_FAQ.md  lab01---intuitionistic-propositional-logic-in-agda.nextjournal.md
