cabal-version: 1.12

name:           acknowledgments
version:        0.1.0.0
license:        LGPL
build-type:     Simple

executable acknowledgements
  main-is: Main.hs
  other-modules:
      Paths_acknowledgments
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , base-compat
    , bytestring
    , containers
    , exceptions
    , github
    , text
    , vector
    , yaml >=0.8.3
  default-language: Haskell2010
